@@ -1,6 +1,7 @@
 package org.machanism.machai.bindex.builder;
 
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.mock;
@@ -8,7 +9,8 @@ import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.verify;
 
 import java.io.File;
-import java.io.FileWriter;
+import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 
@@ -20,56 +22,58 @@ import org.machanism.machai.ai.manager.GenAIProvider;
 import org.machanism.machai.project.layout.ProjectLayout;
 
 class PythonBindexBuilderTest {
-	@TempDir
-	Path tempDir;
+    @TempDir
+    Path tempDir;
 
-	private ProjectLayout layout;
-	private PythonBindexBuilder builder;
-	private GenAIProvider genAI;
+    private ProjectLayout layout;
+    private PythonBindexBuilder builder;
+    private GenAIProvider genAI;
 
-	@BeforeEach
-	void setUp() {
-		layout = mock(ProjectLayout.class);
-		doReturn(tempDir.toFile()).when(layout).getProjectDir();
-		builder = spy(new PythonBindexBuilder(layout));
-		genAI = mock(GenAIProvider.class);
-		doReturn(genAI).when(builder).getGenAIProvider();
-	}
+    @BeforeEach
+    void setUp() {
+        layout = mock(ProjectLayout.class);
+        doReturn(tempDir.toFile()).when(layout).getProjectDir();
+        builder = spy(new PythonBindexBuilder(layout));
+        genAI = mock(GenAIProvider.class);
+        doReturn(genAI).when(builder).getGenAIProvider();
+    }
 
-	@Test
-	@Disabled
-	void projectContext_promptsProjectBuildSectionAndPythonSourcesWhenPresent() throws Exception {
-		// Arrange
-		File pyproject = new File(tempDir.toFile(), "pyproject.toml");
-		try (FileWriter writer = new FileWriter(pyproject)) {
-			writer.write("[project]\nname = \"sample\"\n");
-		}
+    @Test
+    @Disabled
+    void projectContext_promptsProjectBuildSectionAndPythonSourcesWhenPresent() throws Exception {
+        // Arrange
+        File pyproject = new File(tempDir.toFile(), "pyproject.toml");
+        Files.write(pyproject.toPath(), "[project]\nname = \"sample\"\n".getBytes(StandardCharsets.UTF_8));
 
-		Path sourceDir = tempDir.resolve("sample");
-		Files.createDirectories(sourceDir);
-		Path pyFile = sourceDir.resolve("mod1.py");
-		Files.writeString(pyFile, "print('hello')");
+        Path sourceDir = tempDir.resolve("sample");
+        Files.createDirectories(sourceDir);
+        Path pyFile = sourceDir.resolve("mod1.py");
+        Files.write(pyFile, "print('hello')".getBytes(StandardCharsets.UTF_8));
 
-		// Act
-		builder.projectContext();
+        // Act
+        builder.projectContext();
 
-		// Assert
-		verify(genAI).prompt(anyString());
-		verify(genAI).promptFile(pyFile.toFile(), "source_resource_section");
-	}
+        // Assert
+        verify(genAI).prompt(anyString());
+        verify(genAI).promptFile(pyFile.toFile(), "source_resource_section");
+        verify(genAI).prompt(anyString());
+    }
 
-	@Test
-	void projectContext_throwsWhenPyprojectTomlIsMissing() {
-		// Arrange
-		// no pyproject.toml
+    @Test
+    void projectContext_throwsWhenPyprojectTomlIsMissing_butTestDoesNotFailBuild() throws IOException {
+        // Arrange
+        // no pyproject.toml
 
-		// Act + Assert
-		assertDoesNotThrow(() -> {
-			try {
-				builder.projectContext();
-			} catch (java.io.FileNotFoundException expected) {
-				return;
-			}
-		});
-	}
+        // Act + Assert
+        assertDoesNotThrow(() -> {
+            try {
+                builder.projectContext();
+            } catch (java.io.FileNotFoundException expected) {
+                // expected
+            }
+        });
+
+        verify(genAI, org.mockito.Mockito.never()).promptFile(any(File.class), anyString());
+        verify(genAI, org.mockito.Mockito.never()).prompt(anyString());
+    }
 }
